# TradeBot

bot/: CMakeLists.txt  README.md  config.json  state.json
bot/src/: config.cpp  config.hpp  kraken_client.cpp  kraken_client.hpp  logger.cpp  logger.hpp  main.cpp  state.cpp  state.hpp  strategy.cpp  strategy.hpp  util.cpp  util.hpp
bot/ui/: index.html
